# from-scratch

./: .devcontainer.dockerfile  .devcontainer.json  .env  .gitconfig  .gitignore  .prettierrc  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  Package.swift  README.md  flake.nix  package-lock.json  package.json
.devcontainer/: devcontainer.json
.devcontainer/devcontainer/: .env  devcontainer.json  docker-compose.yml
.devcontainer/docker-compose/: devcontainer.json
.github/workflows/: docker-image-🐋.yml  docker-publish.yml  nix-flake-❄️.yml
Development/: DevProxy.js  package-lock.json  package.json  proxy.conf
Development/Scripts/: get-host-target-triple.py  test-build-scenarios.sh
Sources/Backend/: Cargo.toml
Sources/Backend/integrations/Native/: CMakePresets.json
Sources/Backend/src/: backend.rs  keycloak_config.rs  lib.rs
Sources/Backend/src/routes/: frontend_routes.rs  mod.rs
Sources/Core/: .gitignore  Cargo.toml  build.rs  package.json
Sources/Core/integrations/Native/: CMakeLists.txt  CMakePresets.json
Sources/Core/native/: CMakeLists.txt  test.h
Sources/Core/rust/: build_information.rs
Sources/Core/src/: app_config.rs  lib.rs
Sources/Core/swift/: Package.swift
Sources/Core/swift/Sources/swift/: swift.swift
Sources/Core/swift/Tests/swiftTests/: swiftTests.swift
Sources/Core/typescript/: main.test.ts
Sources/Infrastructure/: .env  docker-compose.yml
Sources/Test/: CMakeLists.txt  test.c  test.c++  test.h  test.m  test.mm
Sources/UI/: app.json  i18n.js  metro.config.js  package.json  tsconfig.json
Sources/UI/android/: gradle.properties  settings.gradle
Sources/UI/android/app/: build.gradle
Sources/UI/android/app/src/main/: AndroidManifest.xml
Sources/UI/android/app/src/main/java/com/a832738292/UI/: MainActivity.kt  MainApplication.kt
Sources/UI/android/app/src/main/res/values/: strings.xml
Sources/UI/app/: _layout.tsx
Sources/UI/app/(tabs)/: about.tsx  index.tsx
Sources/UI/locales/de/: translation.json
Sources/UI/redux/: hook.ts  listenerMiddleware.ts  store.ts
Sources/UI/redux/state/: apiSlice.ts  authSlice.ts  privateApiSlice.ts
Sources/UI/src/app/(tabs)/: _layout.tsx  about.tsx  index.tsx
Sources/UI/src/components/: AboutInfo.tsx  LogInButton.tsx
Sources/UI/src/components/ui/: IconSymbol.tsx
Sources/UI/src/config/: appConfig.test.tsx  appConfig.tsx
Sources/UI/src/redux/: store.ts
Sources/UI/src/redux/state/: apiSlice.ts  apiSlice.tsx
