[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = { version = "8.7.1", features = ["debug-embed"] }
log = "0.4.27"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
env_logger = "0.11.8"
mime_guess = "2.0.5"
derive-getters = "0.5.0"
wasm-bindgen = "=0.2.100"
mongodb = { version = "3.2.4", optional = true }
actix-web = { version = "4.9.0", optional = true }
actix-web-middleware-keycloak-auth = { version = "0.5.0", optional = true }
actix-cors = { version = "0.7.1", optional = true }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false, optional = true }
diesel = { version = "2.2.9", optional = true }

[lib]
name = "core"
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "backend"
path = "rust/bin/backend/main.rs"
required-features = ["backend"]

[features]
backend = ["dep:mongodb", "dep:actix-web", "dep:actix-web-middleware-keycloak-auth", "dep:actix-cors", "dep:reqwest", "dep:diesel"]
